# deploy-shield

./: Cargo.toml  README.md
docs/: test-validation.md
src/: config.rs  main.rs  privacy.rs  utils.rs
src/commands/: deploy.rs  finalize.rs  fund.rs  init.rs  rotate.rs  status.rs  transfer_authority.rs  upgrade.rs
