[package]
name = "shield-deploy"
version = "0.1.0"
edition = "2024"
authors = ["Emengkeng Juslen <emkjuslen@gmail.com>"]
description = "Privacy-preserving Solana program deployment using ZK Compression"
license = "MIT"

[[bin]]
name = "shield-deploy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = "4.5.54"
dialoguer = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-cli-config = "3.1.6"
solana-client = "3.1.6"
solana-sdk = "3.0.0"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
