[package]
name = "shield-deploy"
version = "0.1.0"
edition = "2024"
authors = ["Emengkeng Juslen <emkjuslen@gmail.com>"]
description = "Privacy-preserving Solana program deployment using ZK Compression"
license = "MIT"

[[bin]]
name = "shield-deploy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bs58 = "0.5"
chrono = "0.4.43"
clap = "4.5.54"
dialoguer = "0.12.0"
light-client = "0.17.2"
light-hasher = "5.0.0"
light-program-test = "0.17.1"
light-sdk = { version = "0.17.1", features = ["anchor", "v2", "cpi-context"] }
privacy-cash = { path = "/home/jussec/privacy-cash-rust-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-cli-config = "3.1.6"
solana-client = "3.1.6"
solana-program = "3.0.0"
solana-sdk = { version = "3.0.0", features = ["full"] }
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-commitment-config = "3.1"
solana-loader-v3-interface = { version = "3.0.0", features = ["bincode"] }
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
