[package]
name = "shield-deploy"
version = "0.1.0"
edition = "2024"
authors = ["Emengkeng Juslen <emkjuslen@gmail.com>"]
description = "Privacy-preserving Solana program deployment using ZK Compression"
license = "MIT"

[[bin]]
name = "shield-deploy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bincode = "1.3.3"
bs58 = "0.5"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
privacy-cash = { path = "/home/jussec/privacy-cash-rust-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-cli-config = "3.1.6"
solana-client = "3.1.6"
solana-program = "3.0.0"
solana-sdk = { version = "3.0.0", features = ["full"] }
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-commitment-config = "3.1"
solana-loader-v3-interface = { version = "3.0.0", features = ["bincode"] }
toml = "0.8"
tokio = { version = "1.49.0", features = ["full"] }
solana-sdk-ids = "3.1.0"

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
